--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,10 @@
     <color name="result_minor_text">#ffc0c0c0</color>
     <color name="result_points">#c000ff00</color>
     <color name="system_bar_color">#fed952</color>
+
+
+    <!-- temple add here to build pass -->
+    <color name="transparent">#00000000</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
